--- a/style.css
+++ b/style.css
@@ -1,7 +1,137 @@
-body  {
-  background: red;
+.btn {
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  background-color: rgb(222, 184, 135);
+  color: black;
+  font-size: 20px;
+  margin: 0px;
+  transition: .3s;
+}
+
+.btn:hover {
+  color: beige;
+  transition: .3s;
+}
+
+btn:focus {
+  outline: none;
+}
+
+.header {
+  padding-left: 5px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size: 24px;
+  background-color: rgb(222, 184, 135);;
+}
+
+.smaller-img {
+  width: 300px;
+  box-shadow: 0 0 15px black;
+  padding: 10px;
+  background: white;
 }
 
 h1 {
-  color: blue;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  text-align: center;
+  font-size: 60px;
+  padding: 0px;
+}
+
+.about {
+  background: beige;
+  padding-top: 100px;
+  padding-bottom: 30px;
+  max-width: 100%;
+  
+}
+
+.sub-header {
+  text-align: center;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size: 20px;
+  margin: -10px;
+}
+
+.about-text {
+  text-align: center;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size: 20px;
+  width: 40%;
+  text-align: justify;
+}
+
+.portfolio-header {
+  text-align: center;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size: 30px;
+  padding-top: 30px;
+}
+
+.portfolio {
+  background-color: rgb(222, 184, 135);
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.portfolio-img {
+  height: 300px;
+  box-shadow: 0 0 20px black;
+  margin-bottom: 20px;
+  transition: .3s;
+}
+
+.portfolio-img:hover {
+  opacity: 0.7;
+  transition: .3s;
+}
+
+.container {
+  margin-top: 40px;
+}
+
+.contact {
+  background: beige;
+  padding-bottom: 30px;
+}
+
+.top {
+  position: fixed;
+  height: 40px;
+  width: 100%;
+  z-index: 9999;
+  background: rgb(222, 184, 135);
+
+}
+
+.fa {
+  margin: 20px;
+  color: black;
+  transition: .3s;
+}
+
+.fa:hover {
+  color: rgb(222, 184, 135);
+  transition: .3s;
+}
+
+.email {
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size: 22px;
+}
+
+.hrclass {
+  height: 1px;
+  width: 50%;
+  background-color: black;
+}
+
+@media only screen and (max-width: 500px) {
+  .about-text {
+    width: 80%;
+  }
+  .hrclass {
+    width: 80%;
+  }
 }
